site/static/css/style.css
:root {
	--dark: #461164;
	--primary: #AA36EF;
	--lighter: #d49af7;
	--white: #efefef;
	--grey: #4f4f4f;
	--black: #181021;
}


/* width */
::-webkit-scrollbar {
	width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
	background: rgba(0,0,0,0);
}

/* Handle */
::-webkit-scrollbar-thumb {
	background: var(--primary);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
	background: var(--dark);
}

code.inline {
    border-radius: 4px;
    background-color: #dfd4ff;
    padding: 0.1em;
}

html, body {
	width: 100%;
	height: 100%;
	margin: 0px;

	background-color: var(--white);
}

.smaller {
	font-size: 0.7rem;
}

.small {
	font-size: 0.85rem;
}

.dark {
	color: var(--dark);
}

.lighter {
	color: var(--lighter);
}

.flex {
	display: flex;
}

.items-center {
	align-items: center;
}

.flex-col {
	display: flex;
	flex-direction: column;
}

.space-between {
	justify-content: space-between;
}

.justify-start {
	justify-content: flex-start;
}

.justify-between {
	justify-content: space-between;
}

.underline {
	text-decoration: underline;
}

.flex-grow {
	flex-grow: 1;
}


button {
	background-color: var(--primary);
	color: var(--white);
	cursor: pointer;
	border: none;
	border-radius: 0.5rem;
	font-weight: bold;
	scale: 1;
}

button:hover {
	background-color: var(--dark);
	transition: 0.2s;
	scale: 1.05;
}

button:active {
	background-color: var(--primary);
	transition: 0.2s;
	scale: 0.975;
}

button.download {
	padding: 0.95rem;
	margin: 0 1rem;
	display: flex;
	gap: 0.5rem;
	align-items: center;
}

.gap-1 { gap: 0.25rem; }
.gap-2 { gap: 0.5rem; }
.gap-3 { gap: 0.75rem; }
.gap-4 { gap: 1rem; }
.gap-5 { gap: 1.25rem; }
.gap-6 { gap: 1.5rem; }
.gap-7 { gap: 1.75rem; }
.gap-8 { gap: 2rem; }
.gap-9 { gap: 2.25rem; }
.gap-10 { gap: 2.5rem; }
.gap-11 { gap: 2.75rem; }
.gap-12 { gap: 3rem; }

footer {
	margin-top: 3rem;
	padding: 2rem 4rem;
	min-height: 6rem;
	background-color: var(--primary);

    width: 100%;
    width: -moz-available;
    width: -webkit-fill-available;
    width: fill-available;
}

body {
	min-height: 100%;
	height: fit-content;
	display: flex;
	flex-direction: column;
	align-items: center;
}

a, p, span.text, span.small, span.smaller, span.decorator, h1, h2, h3, h4, h5, h6  {
	font-family: "Trebuchet MS", Tahoma, sans-serif;
}

h1, h2, h3, h4, h5, h6 {
	color: var(--black);
}

.light > h1,
.light > h2,
.light > h3,
.light > h4,
.light > h5,
.light > h6 {
	color: var(--white) !important;
}

.decorator {
	font-size: 12pt;
	border-radius: 6px;
	color: var(--white);
	font-weight: bold;
	background-color: var(--primary);

	margin: auto 1.5rem;
	padding: 0.2em 0.35em;

}

ul {
	list-style-type: none;
	margin: 0px;
	padding: 0px;
}


li:not(:last-child) {
    padding-bottom: 12px;
}

.method {
    padding-top: 2rem;
}

.btn {
	padding-left: 0.5rem;
}

.light {
	color: var(--white);
}

.btn.light > a > h4 {
	color: var(--white);
}

.btn:hover > a > h4,
.btn:active > a > h4 {
	color: var(--dark);
	transition: 0.1s;
}

code, pre {
    font-family: inconsolata, lucida console, monospace;
	white-space: pre-wrap;
}

header {
	display: flex;
	justify-content: space-between;
	flex-direction: column;
	align-items: baseline;
	width: 100%;
}

header > .wrap,
header:not(:has(.wrap)) {
	width: 100%;
	display: flex;
	flex-direction: row;
	align-items: baseline;
	gap: 0.9rem;
	flex-wrap: wrap;
	justify-content: flex-start;
}


.modules {
	display: flex;
	flex-wrap: wrap;
	gap: 3.5rem;
}

.container {
	width: 80%;
	margin: 0 auto;
}

.flex { 
	display: flex;
}

.flex-col {
	flex-direction: column;
}

a {
	text-decoration: none;
}

a:visited {
	text-decoration: none;
}

.underline {
	text-decoration: underline;
}

.method > p > a {
	text-decoration: underline;
	text-underline-offset: 0.2rem;
}

.version {
	color: var(--dark);

	position:relative;
	top:-0.25em;
	left: -0.25em;
}


main {
	padding: 1.8em;

	height: fit-content;

	width: 100%;

	display: flex;
	flex-direction: column;
	gap: 0rem;
}

.summary {
	min-width: 8em;
}

h1.module {
	position:relative;
	top:-0.25em;
	color: var(--primary);
	font-weight: bold;
}

pre code.hljs {
	padding: 1em;
	max-width: 100%;
	font-size: 10pt;
}


.modules {
	margin-right:auto;
	margin-left:auto;
}

.modules.open {
	margin-right:10.2rem;
	margin-left: 2em;
}
.builds {
	display: flex;
	flex-direction: column;
}


.tags {
	display: none;
}

.home-section {
	display: flex;
	justify-content: space-between;
	flex-direction: column-reverse;
	gap: 2rem;
}


.mosaic {
	display: flex;
	flex-wrap: wrap;
	gap: 1rem;
	max-width: 420px;
	align-content: flex-start;
}

img.demo {
	width: auto;
}
.search-section {
	margin-bottom: 1rem;
	margin-right: 2rem;
	color: var(--lighter)
}

/* PC Version */
@media (min-width: 900px) {

	body {
		align-items: flex-start;
		width: 100%;
	}
	body > div { width: 100%; }

	header {
		flex-direction: row;
	}

	.search-section {
		margin-bottom: 1rem;
		margin-right: 18%;
		color: var(--lighter)
	}
	
	.tags {
		display: block;
	}

	.modules {
		margin-right:auto;
		margin-left:auto;
	}
	
	.modules.open {
		margin-right:auto;
		margin-left: auto;
	}

    main > .method {
		padding-left: 10%;
	}

	h1.module {
		font-size: 32pt;
	}

	pre code.hljs {
		padding: 1em 6em 1em 1em;

		max-width: 38em;
		width: fit-content;
        font-size: 13pt;
	}

	.builds {
		display: flex;
		flex-direction: row;
		align-items: flex-end;
	}
	
	.home-section {
		display: flex;
		justify-content: space-between;
		flex-direction: row;
	}

}

input {
	padding: 0.5rem;
	border:none;
	border-radius: 0.5rem;
	background-color: var(--lighter);
	color: var(--dark);
	outline: none;
}


.search-wrap {
	min-width: 20rem;
	max-width: 32rem;
}

.search-box {
	background-color: var(--lighter);
	color: var(--dark);
	width: 100%;
	top: 2rem;
	border-radius: 0.5rem;
}

.search-box > p#cursor {
	margin: 0rem 0.5rem;
	padding: 0.25rem 0.5rem;
	background-color: var(--dark);
	color: var(--lighter);
	border-radius: 0.5rem;
}

.search-box > p {
	margin: 0.25rem 1rem;
}

.param {
	display: flex;
	gap: 1rem;
	margin: 0.2rem;
	vertical-align: middle;
	align-items: flex-start;
}

.method {
	max-width: 87.5%;
	margin-bottom: 3rem;
}

.method > div.methodDeclaration > code {
	font-size: 16pt;
	white-space: nowrap;
}

.menuBtn {
	position: fixed;
	top: 45dvh;
	right: -3.5em;

	width: 7em;
	border-radius: 49%;

	height: 7em;

	border: none;
	outline: none;
	background-color: var(--primary);
	
}

.menuBtn > img {
	position: relative;
	left: -1.5em;
}

.nav {
	background-color: var(--primary);
	position: fixed;

	min-width: 10em;
	min-height: 100%;

	position: fixed;

	padding: 1.6rem;

	display: flex;
	flex-direction: column;

	right: calc(-100%);

	z-index: 10;
}

.nav.open {
	right: 0px;
}


#download-Windows,
#download-Linux,
#download-Mac,
#download-fallback {
	display: none;
}

